fix: align text in projects

--- a/css/styles.css
+++ b/css/styles.css
@@ -285,13 +285,11 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  text-align: center;
   margin-bottom: 8px;
 }
 
 .portfolio-item-text {
   line-height: 1.5;
-  text-align: center;
 }
 
 /* ------------ Footer -------------- */
